Hide 'generate new ticket' button for inline setting ticket id.

--- a/src/ggrc-client/styles/components/simple-modal/_simple-modal.scss
+++ b/src/ggrc-client/styles/components/simple-modal/_simple-modal.scss
@@ -145,6 +145,10 @@ simple-modal {
     color: $infoWidgetHeader;
   }
 
+  &__note {
+    font-size: 13px;
+  }
+
   &__footer {
     border-top: 1px solid $border-color;
     box-sizing: border-box;
