Add save-search to Global Search

--- a/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
+++ b/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
@@ -597,6 +597,13 @@ mapper-results-columns-configuration {
   }
   &__actions {
     margin-top: 24px;
+
+    &-filter {
+      @include controls-row(8px);
+    }
+    &-search {
+      margin-top: 24px;
+    }
     &--right {
       @include controls-row(8px);
       float: right;
