--- a/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
+++ b/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
@@ -516,15 +516,21 @@ mapper-results-columns-configuration {
         margin: 0px;
       }
     }
-    .modal-body {
+
+    .modal-body-wrapper {
       display: flex;
       aside {
         flex: 1;
+        border-top: 1px solid #E0E0E0;
+        border-right: 1px solid #E0E0E0;
+        padding: 20px;
       }
       main {
         flex: 4;
       }
+    }
 
+    .modal-body {
       .autocomplete-dropdown__input {
         margin: 10px 14px 14px 12px;
       }
