Escape objects titles inside links

--- a/src/ggrc/templates/notifications/bulk_child_sync_failed.html
+++ b/src/ggrc/templates/notifications/bulk_child_sync_failed.html
@@ -36,7 +36,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
         {% for asmnt in sync_data.assessments %}
           <tr>
 
-            <td><a href="{{ asmnt.url }}">{{ asmnt.title }}</a></td>
+            <td><a href="{{ asmnt.url }}">{{ asmnt.title|e }}</a></td>
             <td>&emsp;
               <span {{ style.header_color() }}>Code:</span> {{ asmnt.code }}
             </td>
