--- a/src/ggrc/templates/notifications/email_digest_content.html
+++ b/src/ggrc/templates/notifications/email_digest_content.html
@@ -22,9 +22,9 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                   {% for assessment_id, assessment_data in digest['assessment_assignees_reminder'].items() %}
                   <li {{ style.list_item() }} >
                     {% if assessment_data['end_date'] %}
-                      Assessment "<a href="{{ assessment_data['url'] }}">{{ assessment_data['title'] }}</a>" is due on {{ assessment_data['end_date'] }}.
+                      Assessment "<a href="{{ assessment_data['url'] }}">{{ assessment_data['title']|e }}</a>" is due on {{ assessment_data['end_date'] }}.
                     {% else %}
-                      Assessment "<a href="{{ assessment_data['url'] }}">{{ assessment_data['title'] }}</a>".
+                      Assessment "<a href="{{ assessment_data['url'] }}">{{ assessment_data['title']|e }}</a>".
                     {% endif %}
                   </li>
                   {% endfor %}
@@ -84,11 +84,11 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                   {% for task in digest['due_today'].itervalues() %}
                     <li {{ style.list_item() }} >
                       <a href="{{ task['cycle_task_url'] }}" {{ style.link_text() }} >
-                        {{ task['title'] }}
+                        {{ task['title']|e }}
                       </a>
-                      under {{ task['task_group'].title }} of
+                      under {{ task['task_group'].title|e }} of
                       <a href="{{ task['workflow_url'] }}" {{ style.link_text() }} >
-                        {{ task['workflow'].title }}
+                        {{ task['workflow'].title|e }}
                       </a>
                     </li>
                   {% endfor %}
@@ -128,9 +128,9 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                   <ul {{ style.list_wrap() }} >
                   {% for task in digest['task_overdue'].itervalues() %}
                     <li {{ style.list_item() }} >
-                      <a href="{{ task['cycle_task_url'] }}" {{ style.link_text() }}>{{ task['title'] }}</a>
-                      under {{ task['task_group'].title }} of
-                      <a href="{{ task['workflow_url'] }}" {{ style.link_text() }}>{{ task['workflow'].title }}</a>
+                      <a href="{{ task['cycle_task_url'] }}" {{ style.link_text() }}>{{ task['title']|e }}</a>
+                      under {{ task['task_group'].title|e }} of
+                      <a href="{{ task['workflow_url'] }}" {{ style.link_text() }}>{{ task['workflow'].title|e }}</a>
                       ({{ task['due_date_statement'] }})
                       <ul>
                       {% for related_object_title in task['related_objects'] %}
@@ -150,7 +150,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                   {% for cycle_id, cycle in digest['cycle_started'].iteritems() %}
                     <li {{ style.list_item() }} >
                       New cycle of
-                      <a href="{{ cycle['workflow_url'] }}" {{ style.link_text() }} >{{ cycle['workflow_title'] }}</a>
+                      <a href="{{ cycle['workflow_url'] }}" {{ style.link_text() }} >{{ cycle['workflow_title']|e }}</a>
                       {% if cycle['custom_message'] %}
                         contains custom message:
                         <div {{ style.custom_message() }}>
@@ -171,7 +171,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                     <li {{ style.list_item() }} >
                       New cycle of
                       <a href="{{ workflow['workflow_url'] }}" {{ style.link_text() }} >
-                        {{ workflow['title'] }}</a>
+                        {{ workflow['title']|e }}</a>
                     </li>
                   {% endfor %}
                   </ul>
@@ -190,7 +190,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                   {% for cycle_id, cycle in digest['all_tasks_completed'].iteritems() %}
                     <li {{ style.list_item() }} >
                       {{ cycle['cycle_slug'] }} of
-                      <a href="{{ cycle['cycle_inactive_url'] }}" {{ style.link_text() }} >{{ cycle['cycle_title'] }}</a>
+                      <a href="{{ cycle['cycle_inactive_url'] }}" {{ style.link_text() }} >{{ cycle['cycle_title']|e }}</a>
                     </li>
                   {% endfor %}
                   </ul>
@@ -205,7 +205,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                     <li {{ style.list_item() }} >
                       New cycle of
                       <a href="{{ workflow['workflow_url'] }}" {{ style.link_text() }} >
-                        {{ workflow['title'] }}</a>
+                        {{ workflow['title']|e }}</a>
                       {{ workflow['start_date_statement'] }}.
                     </li>
                   {% endfor %}
@@ -218,7 +218,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                   {% for assessment_id, assessment_data in digest['assessment_open'].iteritems() %}
                     <li {{ style.list_item() }} >
                       <a href="{{ assessment_data['url'] }}" {{ style.link_text() }} >
-                        {{ assessment_data['title'] }}</a>
+                        {{ assessment_data['title']|e }}</a>
                     </li>
                   {% endfor %}
                   </ul>
@@ -233,7 +233,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                   {% for assessment_id, assessment_data in digest['assessment_started'].iteritems() %}
                     <li {{ style.list_item() }} >
                       <a href="{{ assessment_data['url'] }}" {{ style.link_text() }} >
-                        {{ assessment_data['title'] }}</a>
+                        {{ assessment_data['title']|e }}</a>
                     </li>
                   {% endfor %}
                   </ul>
@@ -246,7 +246,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                     <li {{ style.list_item() }} >
                       The below fields were updated for
                       <a href="{{ assessment_data['url'] }}" {{ style.link_text() }} >
-                        {{ assessment_data['title'] }}</a>
+                        {{ assessment_data['title']|e }}</a>
                       ({{ assessment_data['notif_updated_at'].values()[0] }}):
                       <ul>
                         {{ assessment_data['updated_fields']|sort|join(', ') }}
@@ -262,7 +262,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                   {% for assessment_id, assessment_data in digest['assessment_completed'].iteritems() %}
                     <li {{ style.list_item() }} >
                       <a href="{{ assessment_data['url'] }}" {{ style.link_text() }} >
-                        {{ assessment_data['title'] }}</a>
+                        {{ assessment_data['title']|e }}</a>
                         ({{ assessment_data['notif_created_at'].values()[0] }})
                     </li>
                   {% endfor %}
@@ -275,7 +275,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                   {% for assessment_id, assessment_data in digest['assessment_ready_for_review'].iteritems() %}
                     <li {{ style.list_item() }} >
                       <a href="{{ assessment_data['url'] }}" {{ style.link_text() }} >
-                        {{ assessment_data['title'] }}</a>
+                        {{ assessment_data['title']|e }}</a>
                         ({{ assessment_data['notif_created_at'].values()[0] }})
                     </li>
                   {% endfor %}
@@ -288,7 +288,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                   {% for assessment_id, assessment_data in digest['assessment_verified'].iteritems() %}
                     <li {{ style.list_item() }} >
                       <a href="{{ assessment_data['url'] }}" {{ style.link_text() }} >
-                        {{ assessment_data['title'] }}</a>
+                        {{ assessment_data['title']|e }}</a>
                         ({{ assessment_data['notif_created_at'].values()[0] }})
                     </li>
                   {% endfor %}
@@ -301,7 +301,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                   {% for assessment_id, assessment_data in digest['assessment_declined'].iteritems() %}
                     <li {{ style.list_item() }} >
                       <a href="{{ assessment_data['url'] }}" {{ style.link_text() }} >
-                        {{ assessment_data['title'] }}</a>
+                        {{ assessment_data['title']|e }}</a>
                         ({{ assessment_data['notif_created_at'].values()[0] }})
                     </li>
                   {% endfor %}
@@ -314,7 +314,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                   {% for assessment_id, assessment_data in digest['assessment_reopened'].iteritems() %}
                     <li {{ style.list_item() }} >
                       <a href="{{ assessment_data['url'] }}" {{ style.link_text() }} >
-                        {{ assessment_data['title'] }}</a>
+                        {{ assessment_data['title']|e }}</a>
                         ({{ assessment_data['notif_created_at'].values()[0] }})
                     </li>
                   {% endfor %}
