Add view for 'multiselect' CA type

--- a/src/ggrc-client/styles/components/form/field-views/_field-views.scss
+++ b/src/ggrc-client/styles/components/form/field-views/_field-views.scss
@@ -13,7 +13,8 @@ rich-text-form-field-view {
   }
 }
 
-checkbox-form-field-view {
+checkbox-form-field-view,
+multiselect-form-field-view {
   display: block;
 }
 
