Add <multiselect-dropdown> for inline edit mode

--- a/src/ggrc-client/styles/components/multiselect-dropdown/_multiselect-dropdown.scss
+++ b/src/ggrc-client/styles/components/multiselect-dropdown/_multiselect-dropdown.scss
@@ -60,6 +60,10 @@
 
   .multiselect-dropdown {
     &__body {
+      &.inline {
+        position: initial;
+        box-shadow: none;
+      }
       position: absolute;
       box-sizing: border-box;
       width: 100%;
