Stretch GCA block to full page width

--- a/src/ggrc-client/styles/components/form/_ggrc-form.scss
+++ b/src/ggrc-client/styles/components/form/_ggrc-form.scss
@@ -28,7 +28,6 @@
   &.ggrc-form-multiple-columns {
     display: flex;
     flex-wrap: wrap;
-    max-width: 720px;
 
     .ggrc-form-item {
       .ggrc-form-item__multiple-row {
@@ -183,3 +182,24 @@
     margin-bottom: 0;
   }
 }
+
+.ggrc-form {
+  &.ggrc-form-multiple-columns {
+    .ggrc-form-item {
+      &--column {
+        flex-basis: 200px;
+        width: 200px;
+        margin-right: 40px;        
+      }
+
+      &--row {
+        width: 100%;
+      }
+
+      .inline-edit-control {
+        width: 100%;
+      }
+    }
+  }
+}
+
