Improve color inside of Controls/Objectives and Scope in LHN

--- a/src/ggrc-client/styles/_colors.scss
+++ b/src/ggrc-client/styles/_colors.scss
@@ -139,7 +139,11 @@ $lhnMenuHeader: rgba($black, 0.7);
 $lhnSectionHeader: rgba($black, 0.6);
 $lhnLightGray: #f3f3f3;
 $lhnTabsBg: $contentBgnd;
-$lhnTabsText: rgba($black, 0.6);;
+$lhnTabsText: rgba($black, 0.6);
+$lhnGovernanceHover: #014780;
+$lhnEntitiesHover: #4C4C4C;
+$lhnBusinessHover: #176319;
+$lhnRiskHover: #3B0620;
 
 $lightBlue: #40c4ff;
 $orange: #ffab40;
