Add 'multiselect' CA to edit modal

--- a/src/ggrc-client/styles/components/form/_ggrc-form.scss
+++ b/src/ggrc-client/styles/components/form/_ggrc-form.scss
@@ -172,6 +172,10 @@
     */
     custom-attributes-field {
       outline: none;
+
+      .multiselect-dropdown {
+        max-width: 100%;
+      }
     }
   }
 
