--- a/src/ggrc-client/styles/_placeholders.scss
+++ b/src/ggrc-client/styles/_placeholders.scss
@@ -200,3 +200,26 @@
   position: absolute;
   left: -28px;
 }
+
+%form-field-dropdown-input {
+  width: 100%;
+  font-size: 13px;
+  -webkit-appearance: none;
+  border-radius: 2px;
+  outline: none;
+  border: 1px solid $widgetBorder;
+  color: #555;
+  padding: 0 24px 0 4px;
+  height: 28px;
+  box-sizing: border-box;
+  text-overflow: ellipsis;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  transition: border linear .2s, box-shadow linear .2s;
+  background: $white url("data:image/svg+xml;utf8,<svg width='24' height='16' viewBox='0 0 1792 1792' xmlns='http://www.w3.org/2000/svg'><path fill='%23797979' d='M1408 704q0 26-19 45l-448 448q-19 19-45 19t-45-19l-448-448q-19-19-19-45t19-45 45-19h896q26 0 45 19t19 45z'/></svg>") no-repeat 100% 50%;
+  margin: 0;
+
+  &:disabled {
+    cursor: default;
+    opacity: 0.6;
+  }
+}
