Add commnets-paging component

--- a/src/ggrc-client/styles/components/comment/_comment-list.scss
+++ b/src/ggrc-client/styles/components/comment/_comment-list.scss
@@ -7,3 +7,9 @@ mapped-comments {
   overflow-x: hidden;
   display: flex;
 }
+
+comments-paging {
+  .btn:first-child {
+    margin-right: 10px;
+  }
+}
