Exclude ms fields from been highlighted on error

--- a/src/ggrc-client/styles/components/multiselect-dropdown/_multiselect-dropdown.scss
+++ b/src/ggrc-client/styles/components/multiselect-dropdown/_multiselect-dropdown.scss
@@ -30,7 +30,7 @@
     color: rgb(85, 85, 85);
     font-size: 12px;
 
-    &:focus {
+    &.highlightable:focus {
       @extend .dropdown-focus;
     }
     &[disabled] {
