Fix 'multiselect' items representation

--- a/src/ggrc-client/styles/components/inline-edit-control/_inline-edit-control.scss
+++ b/src/ggrc-client/styles/components/inline-edit-control/_inline-edit-control.scss
@@ -108,11 +108,14 @@ inline-edit-control {
     }
 
     .inline__controls {
+      &.ms-controls {
+        bottom: -30px;
+      }
+      bottom: -31px;
       display: block;
       position: absolute;
       text-align: center;
       top: auto;
-      bottom: -31px;
       right: 0;
       border: 1px solid $warmGray;
       background: $white;
