--- a/src/ggrc-client/styles/modules/_inline-edit.scss
+++ b/src/ggrc-client/styles/modules/_inline-edit.scss
@@ -8,6 +8,7 @@
     word-break: break-word;
 
     .fa.fa-circle {
+      display: inline;
       position: relative;
       bottom: 2px;
       font-size: 5px;
