--- a/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
+++ b/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
@@ -519,14 +519,22 @@ mapper-results-columns-configuration {
 
     .modal-body-wrapper {
       display: flex;
+
       aside {
+        display: flex;
+        flex-direction: column;
         flex: 1;
         border-top: 1px solid #E0E0E0;
         border-right: 1px solid #E0E0E0;
         padding: 20px;
       }
+
       main {
         flex: 4;
+      }
+
+      saved-search-list {
+        flex: 1;
       }
     }
 
