Validate ms values in actual options list

--- a/src/ggrc-client/styles/components/inline-edit-control/_inline-edit-control.scss
+++ b/src/ggrc-client/styles/components/inline-edit-control/_inline-edit-control.scss
@@ -143,7 +143,7 @@ inline-edit-control {
 
     &--invalid {
       .inline__content-input {
-        border: solid 1px red;
+        outline: solid 1px red;
         border-radius: 2px;
       }
     }
