Mark evidence as 'deprecated' based on it's state

--- a/src/ggrc-client/styles/components/mapped-objects/_mapped-objects.scss
+++ b/src/ggrc-client/styles/components/mapped-objects/_mapped-objects.scss
@@ -143,6 +143,9 @@
     min-width: 0;
 
     .link {
+      &.deprecated {
+        color: $status-deprecated;
+      }
       font-style: italic;
       font-size: 13px;
       display: inline-block;
