Add new awesome person-autocomplete-field

--- a/src/ggrc-client/styles/_components.scss
+++ b/src/ggrc-client/styles/_components.scss
@@ -72,6 +72,7 @@
 @import "components/proposable-control/proposable-control";
 @import "components/general-page-header/general-page-header";
 @import "components/people-autocomplete-dropdown/people-autocomplete-dropdown";
+@import "components/person-autocomplete-field/person-autocomplete-field";
 @import "components/issue-tracker/_modal-issue-tracker";
 @import "components/issue-tracker/_info-issue-tracker-fields";
 @import "components/issue-tracker/_info-pane-issue-tracker-fields";
