Update wrapper component name in styles

--- a/src/ggrc-client/styles/components/people-autocomplete-dropdown/_people-autocomplete-dropdown.scss
+++ b/src/ggrc-client/styles/components/people-autocomplete-dropdown/_people-autocomplete-dropdown.scss
@@ -3,7 +3,7 @@
  * Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
  */
 
-people-mention {
+people-autocomplete-dropdown {
   people-autocomplete-wrapper {
     position: relative;
     display: block;
