--- a/src/ggrc-client/styles/_widget.scss
+++ b/src/ggrc-client/styles/_widget.scss
@@ -5,7 +5,12 @@
 
 .widget {
   .header {
-    @extend %row-fluid-fix;
+    [class*="span"] {
+      padding-bottom:0;
+      margin-bottom:0;
+      min-height:0;
+    }
+
     height: 30px;
     background: none;
     h2 {
@@ -83,15 +88,6 @@
         @include opacity(1);
       }
     }
-    &.pbc-read-only {
-      background:$lightGray;
-      padding-right:12px;
-      padding-left:12px;
-      .btn {
-        padding-right:6px;
-        padding-left:6px;
-      }
-    }
     .form-inline {
       margin-bottom: 0;
     }
@@ -128,7 +124,7 @@
       font-size:$f-regular;
     }
     li.main {
-      @extend %default-border-bottom;
+      border-bottom: 1px solid $lightGray;
       padding:10px 0;
       h4 {
         font-size: $f-regular;
