Add 'visibility' css visibility to dropdown checkbox

--- a/src/ggrc-client/styles/components/dropdown-wrap-text/_dropdown-wrap-text.scss
+++ b/src/ggrc-client/styles/components/dropdown-wrap-text/_dropdown-wrap-text.scss
@@ -64,6 +64,11 @@ dropdown-wrap-text {
       width: 8px;
       padding-right: 8px;
       align-self: center;
+      visibility: hidden;
+
+      &.visible {
+        visibility: visible;
+      }
     }
 
     .dropdown-wrap-text__element-title {
