--- a/src/ggrc-client/styles/components/custom-attributes/_custom-attributes.scss
+++ b/src/ggrc-client/styles/components/custom-attributes/_custom-attributes.scss
@@ -81,7 +81,7 @@ custom-attributes {
     }
 
     .form-field__content {
-      max-width: 360px;
+      max-width: 100%;
       &.custom-attribute-checkbox {
         min-width: auto;
         padding: 3px 8px 0 0;
