--- a/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
+++ b/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
@@ -524,6 +524,7 @@ mapper-results-columns-configuration {
         display: flex;
         flex-direction: column;
         flex: 1;
+        max-width: 20%;
         border-top: 1px solid #E0E0E0;
         border-right: 1px solid #E0E0E0;
         padding: 20px;
