--- a/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
+++ b/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
@@ -11,7 +11,6 @@ $related-assessment-button-width: 95px;
 $object-selection-item-width: 102px;
 $object-selection-item-with-related-assessments-width: 16px;
 $first-column-width: 25%;
-$items-separator-color: #e0e0e0;
 
 @mixin cell-styles() {
   flex: 1 1;
@@ -97,7 +96,7 @@ mapper-results {
     > object-list {
       > .object-list__item {
         color: $black;
-        border-bottom: 1px solid $items-separator-color;
+        border-bottom: 1px solid $itemBorder;
 
         object-selection-item {
           align-items: center;
@@ -112,7 +111,7 @@ mapper-results {
 
       > .object-list__item:first-child,
       spinner-component + .object-list__item {
-        border-top: 1px solid $items-separator-color;
+        border-top: 1px solid $itemBorder;
       }
     }
   }
@@ -525,8 +524,8 @@ mapper-results-columns-configuration {
         flex-direction: column;
         flex: 1;
         max-width: 20%;
-        border-top: 1px solid #E0E0E0;
-        border-right: 1px solid #E0E0E0;
+        border-top: 1px solid $itemBorder;
+        border-right: 1px solid $itemBorder;
         padding: 20px;
       }
 
@@ -543,7 +542,7 @@ mapper-results-columns-configuration {
       .autocomplete-dropdown__input {
         margin: 10px 14px 14px 12px;
       }
-      border-top: 1px solid #E0E0E0;
+      border-top: 1px solid $itemBorder;
       padding: 20px !important;
       select, input, .input-block-level {
         margin: 0;
@@ -561,7 +560,7 @@ mapper-results-columns-configuration {
       }
     }
     .modal-footer {
-      border-top: 1px solid #E0E0E0;
+      border-top: 1px solid $itemBorder;
 
       .search-results {
         margin-top: 20px;
