--- a/src/ggrc/templates/notifications/email_digest_content.html
+++ b/src/ggrc/templates/notifications/email_digest_content.html
@@ -150,7 +150,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                   {% for cycle_id, cycle in digest['cycle_started'].iteritems() %}
                     <li {{ style.list_item() }} >
                       New cycle of
-                      <a href="{{ cycle['cycle_url']|e }}" {{ style.link_text() }} >{{ cycle['cycle_title'] }}</a>
+                      <a href="{{ cycle['workflow_url'] }}" {{ style.link_text() }} >{{ cycle['workflow_title'] }}</a>
                       {% if cycle['custom_message'] %}
                         contains custom message:
                         <div {{ style.custom_message() }}>
@@ -167,7 +167,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                     {{ "cycles" if digest['cycle_start_failed']|length > 1 else "cycle" }}
                     failed to start</h2>
                   <ul {{ style.list_wrap() }} >
-                  {% for workflow_id, workflow in digest['cycle_start_failed'].iteritems() %}
+                  {% for workflow_id, workflow in digest['ƒ'].iteritems() %}
                     <li {{ style.list_item() }} >
                       New cycle of
                       <a href="{{ workflow['workflow_url'] }}" {{ style.link_text() }} >
@@ -201,7 +201,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                     {{ "workflows" if digest['cycle_starts_in']|length > 1 else "workflow" }}
                   </h2>
                   <ul {{ style.list_wrap() }} >
-                  {% for workflow_id, workflow in digest['cycle_starts_in'].iteritems() %}
+                  {% for workflow_id, workflow in digest['ƒ'].iteritems() %}
                     <li {{ style.list_item() }} >
                       New cycle of
                       <a href="{{ workflow['workflow_url'] }}" {{ style.link_text() }} >
