Move styles in separate file for lca attrs

--- a/src/ggrc-client/styles/_components.scss
+++ b/src/ggrc-client/styles/_components.scss
@@ -78,3 +78,4 @@
 @import "components/mapped-controls/mapped-controls";
 @import "components/dropdown-wrap-text/dropdown-wrap-text";
 @import "components/saved-search-list/saved-search-list";
+@import "components/assessment-template-attributes/assessment-template-attributes";
