--- a/src/ggrc-client/styles/components/saved-search-list/_saved-search-list.scss
+++ b/src/ggrc-client/styles/components/saved-search-list/_saved-search-list.scss
@@ -4,65 +4,81 @@
  */
 
 saved-search-list {
-  h3 {
-    font-weight: normal;
-    margin-bottom: 10px;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
-    li {
-      .saved-search-item {
-        display: flex;
-        cursor: pointer;
-        opacity: 0.7;
-        margin-bottom: 6px;
-        padding: 1px 4px;
-
-        &:hover {
-          opacity: 1;
-  
-          .fa-trash, .fa-link {
-            opacity: 0.8;
-            visibility: visible;
-  
-            &:hover {
-              opacity: 1;
-            }
-          }
-        }
-
-        &.applied {
-          background: $contentBgnd;
-          border-radius: 4px;
-  
-          span {
-            font-weight: bold;
-          }
-        }
-
-        .saved-search-item__title {
-          display: block;
-          max-width: calc(100% - 13px);
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-        }
-  
-        .fa-trash, .fa-link{
-          margin-left: 6px;
-          visibility: hidden;
-        }
-      }
-
-      &.disabled {
-        pointer-events: none;
-        opacity: 0.7;
-      }
+  .saved-search-list__items {
+    h3 {
+      font-weight: normal;
+      margin-bottom: 10px;
     }
 
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+
+      li {
+        .saved-search-item {
+          display: flex;
+          align-items: center;
+          cursor: pointer;
+          opacity: 0.7;
+          margin-bottom: 6px;
+          padding: 1px 4px;
+
+          &:hover {
+            opacity: 1;
+    
+            .fa-trash-o, .fa-link {
+              opacity: 0.8;
+              visibility: visible;
+
+              &:hover {
+                opacity: 1;
+              }
+            }
+          }
+
+          &.selected {
+            background: $contentBgnd;
+            border-radius: 4px;
+
+            span {
+              font-weight: bold;
+            }
+          }
+
+          .saved-search-item__title {
+            display: block;
+            max-width: calc(100% - 13px);
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            line-height: 20px;
+          }
+
+          clipboard-link {
+            line-height: 12px;
+          }
+
+          .fa-trash-o, .fa-link {
+            margin-left: 6px;
+            visibility: hidden;
+          }
+        }
+
+        &.disabled {
+          pointer-events: none;
+          opacity: 0.7;
+        }
+      }
+
+    }
+  }
+
+  .saved-search-list__pagination {
+    align-self: center;
   }
 }
