Inline required span12 styles
Required to reduce coupling of input with row-fluid class
Cause element with span12 class must have parent with row-fluid class

--- a/src/ggrc-client/styles/components/person-autocomplete-field/person-autocomplete-field.scss
+++ b/src/ggrc-client/styles/components/person-autocomplete-field/person-autocomplete-field.scss
@@ -4,5 +4,8 @@
  */
 
 input.person-autocomplete-field__input {
+  box-sizing: border-box;
   margin-bottom: 0;
+  width: 100%;
+  min-height: 28px;
 }
