Use flexboxes instead of bootstrap's styles
Added grab cursor for arrows icon, when it's
hovered.

--- a/src/ggrc-client/styles/_colors.scss
+++ b/src/ggrc-client/styles/_colors.scss
@@ -94,7 +94,7 @@ $footerBorder: #ddd;
 $infoMessageBorder: #ddd;
 $infoMessageText: #bbb;
 $tabBgnd: #fafafa;
-$tabBorder: #ddd;
+$templateGridBorder: #ddd;
 $stateBgnd: #ddd;
 $stateText: #777;
 $tabHoverBgnd: #444;
