--- a/src/ggrc-client/styles/_components.scss
+++ b/src/ggrc-client/styles/_components.scss
@@ -79,3 +79,5 @@
 @import "components/dropdown-wrap-text/dropdown-wrap-text";
 @import "components/saved-search-list/saved-search-list";
 @import "components/assessment-template-attributes/assessment-template-attributes";
+@import "components/add-template-field/add-template-field";
+@import "components/template-field/template-field";
