Add initial spinner
When the user chooses some template
and in the same time it did non have
preselected templete before choosing.

--- a/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
+++ b/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
@@ -658,6 +658,7 @@ mapper-results-columns-configuration {
       @include controls-row;
       select {
         width: 140px;
+        margin-bottom: 0;
       }
     }
   }
