Fix styles of advanced-search

--- a/src/ggrc-client/styles/components/simple-modal/_simple-modal.scss
+++ b/src/ggrc-client/styles/components/simple-modal/_simple-modal.scss
@@ -23,6 +23,7 @@ simple-modal {
   height: 100%;
   z-index: zIndex(simple-model-overlay);
   flex-direction: column;
+  overflow: auto;
 }
 
 .simple-modal {
