--- a/src/ggrc-client/styles/components/advanced-search/_advanced-search.scss
+++ b/src/ggrc-client/styles/components/advanced-search/_advanced-search.scss
@@ -112,8 +112,12 @@
   $simple-modal-footer-height: 64px;
 
   &.simple-modal {
-    max-height: 85%;
+    max-height: none;
     max-width: 90%;
+    top: 150px;
+    margin-bottom: 100px;
+    position: absolute;
+
     .simple-modal__body {
       padding: 20px 16px 24px;
       overflow: visible;
