--- a/src/ggrc-client/styles/components/issue-tracker/_modal-issue-tracker-fields.scss
+++ b/src/ggrc-client/styles/components/issue-tracker/_modal-issue-tracker-fields.scss
@@ -3,7 +3,8 @@
  * Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
 */
 
-modal-issue-tracker-fields {
+modal-issue-tracker-fields,
+modal-issue-tracker-config-fields {
   .people-sync-state {
     display: inline-block;
     background-color: $status-draft;
