Add tooltip icon for 'select assessment template' dropdown

--- a/src/ggrc-client/styles/modules/_modal.scss
+++ b/src/ggrc-client/styles/modules/_modal.scss
@@ -206,6 +206,13 @@
         width: 418px;
       }
     }
+    .assessment-template-dropdown {
+      display: flex;
+
+      .fa-question-circle {
+        margin-left: 6px;
+      }
+    }
     .assessment-procedure-message {
       display: flex;
       align-items: center;
