Update color of readonly template-field

--- a/src/ggrc-client/styles/components/assessment-template-attributes/_assessment-template-attributes.scss
+++ b/src/ggrc-client/styles/components/assessment-template-attributes/_assessment-template-attributes.scss
@@ -22,6 +22,12 @@
   .empty-message {
     font-size: 12px;
   }
+
+  template-field {
+    &.readonly {
+      color: $gray;
+    }
+  }
 }
 
 .sortable-list {
